examples/test/testpolicy15046.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15046
  namespace: namespace429
spec:
  podSelector:
    matchLabels:
      key28: value13
      key17: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value15
      podSelector:
        matchLabels:
          key44: value35
          key3: value2
